<resources>
    <string name="app_name">TahioğluChat</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="i_have_account">Hesabım Var</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="lowercreate_new_account">Yeni Hesap Oluştur</string>
    <string name="create_account">Hesap Oluştur</string>
    <string name="login_with_your_account">Hesabınızla Giriş Yapınız</string>
    <string name="login">Giriş Yapınız</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
