<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

<include layout="@layout/actionbar" android:id="@+id/actionbarRegister"  />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_below="@+id/actionbarRegister"
    android:padding="10dp">


    <TextView
        android:id="@+id/txtinfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercreate_new_account"
        android:textColor="@android:color/black"
        android:layout_below="@id/actionbarRegister"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:textSize="20sp"

        />



    <EditText

        android:id="@+id/txtusernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtinfo2"
        android:hint="@string/username"

        />


    <EditText

        android:id="@+id/txtEmailRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="10dp"

        />



    <EditText

        android:id="@+id/txtPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"


        />



    <Button

        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>



    <Button

        android:id="@+id/btnLoginRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_your_account"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"/>



</LinearLayout>





</RelativeLayout>