<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


<include  layout="@layout/actionbar" android:id="@+id/actionbarlogin"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/actionbarlogin"
        android:padding="10dp"
        >


        <TextView
            android:id="@+id/txtinfo1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_your_account"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="4dp"
            android:textSize="20sp"

            />




        <EditText

            android:id="@+id/txtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"


            />


        <EditText

            android:id="@+id/txtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"


            />





        <Button

            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"


            />

        <Button

            android:id="@+id/btnRegisterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"


            />

    </LinearLayout>










</RelativeLayout>